--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: project_june_practice
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: ">=3.1.1 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  font_awesome_flutter: ^10.5.0
+  scroll_snap_list: ^0.9.1
+  fluttertoast: ^8.2.2
+  google_fonts: ^5.1.0
+  flutter_staggered_grid_view: ^0.7.0
+  lottie: ^2.6.0
+  animated_text_kit: ^4.2.2
+  flip_card: ^0.7.0
+  carousel_slider: ^4.2.1
+  flutter_custom_clippers: ^2.1.0
+  webview_flutter: ^4.2.2
+  rive: ^0.11.14
+  introduction_screen: ^3.1.11
+  readmore: ^2.2.0
+  loading_animation_widget: ^1.2.0+4
+  loader_overlay: ^2.3.0
+  google_maps_flutter: ^2.5.0
+  shared_preferences: ^2.2.1
+  sqflite: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,14 +70,20 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/pfp/
+    - assets/icons/
+    - assets/images/
+    - assets/fruits/
+    - assets/shopping/
+    - assets/animation/
+    - assets/brands/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
